fix: defining a hidden overflow to correct the banner presentation

--- a/src/pages/Feed/Feed.css
+++ b/src/pages/Feed/Feed.css
@@ -41,6 +41,7 @@ footer section {
 
     position: relative;
     height: 620px;
+    overflow: hidden;
 }
 
 .banner .text {
